force-app/main/default/objects/c_ErrorLog__c/c_ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Persistent storage for c_ErrorLog events. Captured by c_ErrorLog trigger filtered by setting in c_Settings.</description>
    <label>ErrorLog</label>
    <nameField>
        <label>Error</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>