force-app/main/default/objects/c_ErrorLog__c/fields/c_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>c_ErrorMessage__c</fullName>
    <description>Content of the Error field from the event.</description>
    <label>ErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>