force-app/main/default/objects/c_ErrorLog__c/fields/c_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>c_StackTrace__c</fullName>
    <description>Content of StackTrace field from the event.</description>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>